--- a/version-info/client/Release 2.0 [Purple] 6023b7c3626d987d9c85c8e2617d3705.json
+++ b/version-info/client/Release 2.0 [Purple] 6023b7c3626d987d9c85c8e2617d3705.json
@@ -7,5 +7,5 @@
   "baseVersion": "2point0_purple",
   "ingameVersionString": "Minecraft 2.0",
   "resourcesVersion": "1.5.2",
-  "downloadURL": "https://archive.org/download/2point-0-purple/2point0_purple.jar"
+  "downloadURL": "https://raw.githubusercontent.com/MCLegoMan/MineOnline-JSON/master/versions/clients/Release%202.0%20%5BPurple%5D/client.jar"
 }
