Update Minecraft 2.0 Red Download

--- a/version-info/client/Release 2.0 [Red] ee00fb8745c03af3fabe8a92cd52ebaf.json
+++ b/version-info/client/Release 2.0 [Red] ee00fb8745c03af3fabe8a92cd52ebaf.json
@@ -7,5 +7,5 @@
   "baseVersion": "2point0_red",
   "ingameVersionString": "Minecraft 2.0",
   "resourcesVersion": "1.5.2",
-  "downloadURL": "https://archive.org/download/2point-0-red/2point0_red.jar"
+  "downloadURL": "https://raw.githubusercontent.com/MCLegoMan/MineOnline-JSON/master/versions/clients/Release%202.0%20%5BRed%5D/client.jar"
 }
